--- a/index.html
+++ b/index.html
@@ -1,37 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./assets/css/style.css" rel="stylesheet"/>
-  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="./assets/css/style.css" rel="stylesheet" />
+
   <title>Code Quiz</title>
 </head>
+
 <body>
   <header>
     <h4 class="high-score" id="high-score">View High Scores</h4>
-    <h4 class="timer" id="timer">Time:</h4>
+    <h4 class="timer" id="timer">Time: <span>    </span> </h4>
   </header>
   <main>
     <div id="start-screen" class="start">
       <h1>Coding Quiz Challenge</h1>
       <p>
-        Try to answer the following code-related questions within the time
-        limit. Keep in mind that incorrect answers will penalize your
-        score/time by ten seconds!
+        Try to answer the following code-related questions within the time limit. <br/>
+        Keep in mind that incorrect answers will penalize your score/time by ten seconds!
       </p>
       <button id="start">Start Quiz</button>
     </div>
 
     <div class="hide" id="questions">
-      hey you lil piss baby
-      <h2 id="question-title"></h2>
+      <h1 id="question-title"></h1>
       <div class="choices" id="choices"></div>
+      <div class="right-wrong" id="right-wrong"></div>
+    </div>
+
+    <div class="hide" id="end-screen">
+      <h1>Game Over!</h1>
+      <h2>Score: <span id="score"></span></h2>
+      <div>
+        <h2>Enter Initials:</h2>
+        <input class="input" id="input" type="text" max="3" />
+        <button id="save-btn">Submit</button>
+      </div>
+    </div>
+
+    <div id="high-scores" class="hide">
+      <h1>High Scores</h1>
+      <ol id="score-list"></ol>
+      <button id="clear-score-btn">Clear All Scores</button>
+      <button id="restart">
+        Restart Quiz
+      </button>
     </div>
   </main>
 
-<script src="./assets/js/questions.js"></script>
-<script src="./assets/js/logic.js"></script>
+  <script src="./assets/js/questions.js"></script>
+  <script src="./assets/js/logic.js"></script>
 </body>
 
 </html>
